<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="android.view.View" />

        <variable
            name="authFragment"
            type="ru.skillbranch.sbdelivery.ui.fragments.AuthFragment" />

        <variable
            name="viewModel"
            type="ru.skillbranch.sbdelivery.viewmodels.fragments.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/window_background"
        tools:context=".ui.fragments.AuthFragment">

        <ru.skillbranch.sbdelivery.ui.custom.BackgroundTiledView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAuth1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/clAuth2"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:text="@string/email" />

                    <EditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="30dp"
                        android:inputType="textEmailAddress"
                        android:selectAllOnFocus="true"
                        android:text="@={viewModel.email}"
                        tools:text="sidorov.ivan@mail.ru" />

                    <TextView
                        style="@style/TextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="29dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/password" />

                    <EditText
                        style="@style/EditText"
                        android:layout_width="match_parent"
                        android:layout_height="43dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="6dp"
                        android:layout_marginEnd="30dp"
                        android:inputType="textPassword"
                        android:selectAllOnFocus="true"
                        android:text="@={viewModel.password}"
                        tools:text="123456" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/ButtonPrimary"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="53dp"
                        android:layout_marginEnd="30dp"
                        android:onClick="@{() -> authFragment.onLogin()}"
                        android:text="@string/login" />

                    <androidx.appcompat.widget.AppCompatButton
                        style="@style/ButtonSecondary"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:onClick="@{() -> authFragment.onRegistration()}"
                        android:text="@string/registration" />

                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clAuth2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/clAuth1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="37dp"
                android:onClick="@{() -> authFragment.onRecovery()}"
                android:text="@string/password_recovery"
                android:textColor="@color/text_view_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:visibility="@{authFragment.progressShow ? view.VISIBLE : view.GONE}"
            tools:visibility="visible">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>